# Django-Template

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.txt  LICENSE  Pipfile  README.md  db.sqlite3  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.production.yml  makefile  manage.py  package.json  pyproject.toml  tailwind.config.js
.devcontainer/: devcontainer.json
.envs/.local/: .postgres
apps/content/: forms.py  urls.py  views.py
apps/core/: throttle.py  utils.py  views.py
apps/finances/: serializers_payments.py  signals.py  urls.py  urls_payments.py  views.py  views_payments.py
apps/frontend/: __init__.py  context_processors.py  forms.py  urls.py  views.py
apps/iam/: apps.py  forms.py  signals.py  tasks.py  urls.py  views.py  web_views.py
apps/integrations/: urls.py  views.py
apps/multitenancy/: models.py  notifications.py  urls.py  views.py
apps/notifications/: urls.py  views.py
apps/tasks/: email_tasks.py
apps/tenancy/: apps.py  views.py
apps/user_management/: apps.py  serializers.py  urls.py  views.py
apps/users/: signals.py
config/: asgi.py  env.py  routing.py  settings.py  urls.py  urls_api.py  wsgi.py
config/django/: base.py  local.py  production.py
config/settings/: base.py  celery.py  email.py  file_storage.py  local.py  production.py  test.py
django_template/: conftest.py
docs/: 1. initialization.ipynb  2. django_default_models.ipynb  4. tailwind_config.ipynb  5. custom_error_views.ipynb  6. django_rest.ipynb  conf.py  index.rst  khalti_integration.md
infra/: Dockerfile  docker-compose.yml
(+113 files in other folders)
