[project]
name = "django-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.51",
    "celery>=5.6.3",
    "django>=6.0.7",
    "django-easy-audit>=1.3.9",
    "django-environ>=0.14.0",
    "django-storages>=1.14.6",
    "djangorestframework>=3.17.1",
]
