[project]
name = "django-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.51",
    "celery>=5.6.3",
    "django>=6.0.7",
    "django-cors-headers>=4.9.0",
    "django-easy-audit>=1.3.9",
    "django-environ>=0.14.0",
    "django-redis>=7.0.0",
    "django-storages>=1.14.6",
    "django-tenant-users>=2.2.1",
    "django-tenants>=3.10.2",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "psycopg>=3.3.4",
    "redis[hiredis]>=8.0.1",
]
